Questionnaire content updates and typos

--- a/app/views/manage/questionnaire/v11/task-list__appeal-process.html
+++ b/app/views/manage/questionnaire/v11/task-list__appeal-process.html
@@ -22,7 +22,7 @@
     rows: [
       {
         key: {
-          html: 'Recommended procedure'
+          html: 'Procedure type'
         },
         value: {
           html: (data['procedure'] or 'Written representations')+('<br>Length:'+data['procedure-lenth'] if data['procedure'] == 'Inquiry')
