--- a/app/views/manage/questionnaire/v11/task-list__constraints.html
+++ b/app/views/manage/questionnaire/v11/task-list__constraints.html
@@ -22,7 +22,7 @@
     rows: [
       {
         key: {
-          html: 'Listed bulding'
+          html: 'Listed building'
         },
         value: {
           html: data['listed-building-check'] or 'No'
@@ -72,7 +72,7 @@
       } if data['listed-building-check'] == 'Yes',
       {
         key: {
-          html: 'Affects a listed bulding'
+          html: 'Affects a listed building'
         },
         value: {
           html: data['affected-listed-building-check'] or 'No'
@@ -347,7 +347,7 @@
       } if data['tree-order-check'] == 'Yes',
       {
         key: {
-          html: 'Related to a Gypsy or Traveller'
+          html: 'Gypsy or Traveller'
         },
         value: {
           html: data['traveller'] or 'No'
@@ -372,7 +372,7 @@
       },
       {
         key: {
-          html: 'Public right of way removed or diverted'
+          html: 'Public right of way'
         },
         value: {
           html: data['right-of-way-check'] or 'No'
