--- a/app/views/manage/questionnaire/v11/task-list__consultation.html
+++ b/app/views/manage/questionnaire/v11/task-list__consultation.html
@@ -22,7 +22,7 @@
     rows: [
       {
         key: {
-          html: 'Consulted relevant statutory consultees'
+          html: 'Statutory consultees'
         },
         value: {
           html: data['consulted'] or 'No'
@@ -47,7 +47,7 @@
       },
       {
         key: {
-          html: 'Consultation responses or standing advice to upload'
+          html: 'Responses or standing advice to upload'
         },
         value: {
           html: data['consultation-responses-check'] or 'No'
