--- a/app/views/manage/questionnaire/v11/task-list__env-impact.html
+++ b/app/views/manage/questionnaire/v11/task-list__env-impact.html
@@ -22,7 +22,7 @@
     rows: [
       {
         key: {
-          html: 'Schedule'
+          html: 'Schedule type'
         },
         value: {
           html: data['schedule'] or 'No'
