--- a/app/views/manage/questionnaire/v11/task-list.html
+++ b/app/views/manage/questionnaire/v11/task-list.html
@@ -92,7 +92,7 @@
       <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
 
       <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
-        Questionnaire incomplete
+        Complete the questionnaire
       </h2>
       <p class="govuk-!-margin-bottom-7">You have completed {{count}} of 8 sections.</p>
 
