--- a/app/views/manage/questionnaire/v11/task-list__po-report.html
+++ b/app/views/manage/questionnaire/v11/task-list__po-report.html
@@ -4,7 +4,7 @@
     {% if data['non-determination'] == 'true' %}
       What your decision notice would have said and relevant policies
     {% else %}
-      Planning officer&rsquo;s report and relevant policies
+      Planning officer’s report and relevant policies
     {% endif %}
 
     {% if data['po-report-completed'] == 'true' %}
@@ -30,7 +30,7 @@
     rows: [
       {
         key: {
-          html: 'Upload what your decision notice would have said' if data['non-determination'] == 'true' else 'Upload the planning officer&rsquo;s report'
+          html: 'Upload what your decision notice would have said' if data['non-determination'] == 'true' else 'Upload planning officer’s report'
         },
         value: {
           html: data['report-upload'] or 'report.pdf'
@@ -55,7 +55,7 @@
       },
       {
         key: {
-          html: 'Upload relevant policies from the statutory development plan'
+          html: 'Upload policies from statutory development plan'
         },
         value: {
           html: data['policies-upload'] or 'policies.pdf'
