--- a/app/views/manage/questionnaire/v12/consultation/consultation-responses-check.html
+++ b/app/views/manage/questionnaire/v12/consultation/consultation-responses-check.html
@@ -1,11 +1,11 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Does a Tree Preservation Order (TPO) apply to any part of the appeal site?' %}
+{% set title = 'Do you have any consultation responses or standing advice from statutory consultees to upload?' %}
 
 {% block questions %}
   {{ govukRadios({
-    idPrefix: 'tree-order-check',
-    name: 'tree-order-check',
+    idPrefix: 'consultation-responses-check',
+    name: 'consultation-responses-check',
     fieldset: {
       legend: {
         html: title,
@@ -17,12 +17,12 @@
       {
         html: 'Yes',
         value: 'Yes',
-        checked: checked('tree-order-check','Yes')
+        checked: checked('consultation-responses-check','Yes')
       },
       {
         html: 'No',
         value: 'No',
-        checked: checked('tree-order-check','No')
+        checked: checked('consultation-responses-check','No')
       }
     ]
   }) }}
