--- a/app/views/manage/questionnaire/v12/po-report/supplementary-check.html
+++ b/app/views/manage/questionnaire/v12/po-report/supplementary-check.html
@@ -1,11 +1,11 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Does a Tree Preservation Order (TPO) apply to any part of the appeal site?' %}
+{% set title = 'Did any supplementary planning documents inform the outcome of the application?' %}
 
 {% block questions %}
   {{ govukRadios({
-    idPrefix: 'tree-order-check',
-    name: 'tree-order-check',
+    idPrefix: 'supplementary-check',
+    name: 'supplementary-check',
     fieldset: {
       legend: {
         html: title,
@@ -17,12 +17,12 @@
       {
         html: 'Yes',
         value: 'Yes',
-        checked: checked('tree-order-check','Yes')
+        checked: checked('supplementary-check','Yes')
       },
       {
         html: 'No',
         value: 'No',
-        checked: checked('tree-order-check','No')
+        checked: checked('supplementary-check','No')
       }
     ]
   }) }}
