LPA questionnaire content update + Back office casework screen

--- a/app/assets/sass/pins/pins_tables.scss
+++ b/app/assets/sass/pins/pins_tables.scss
@@ -2,10 +2,10 @@
 	border-bottom: none;
 }
 
-// .pins-govuk-table__row--last td,
-// .pins-govuk-table__row--last th {
-// 	border-bottom: none;
-// }
+.pins-govuk-table__row--last td,
+.pins-govuk-table__row--last th {
+	border-bottom: none;
+}
 //
 // .pins-table-divider {
 // 	margin-top:0;
