--- a/app/views/manage/questionnaire/index.html
+++ b/app/views/manage/questionnaire/index.html
@@ -32,7 +32,12 @@
 
     <p class="govuk-!-margin-bottom-2">Changes:</p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>changes to listed building questions to ask for Heritage England list entry numbers</li>
+      <li>
+        changes to listed building questions to ask for Heritage England list entry numbers
+      </li>
+      <li>
+        updated ‘ancient’ monument to ‘scheduled’ monument
+      </li>
     </ul>
 
     {{ govukButton({
