Content updates to LPA account and user access

--- a/app/views/manage/appeals/v3/index.html
+++ b/app/views/manage/appeals/v3/index.html
@@ -23,7 +23,7 @@
 {% set serviceName = "Manage your planning inspectorate appeals" %}
 {% set nav = true %}
 
-{% set title = 'Planning appeals' %}
+{% set title = 'Manage appeals' %}
 
 {% block beforeContent %}
   {{ govukPhaseBanner({
@@ -86,7 +86,7 @@
 
     <p class="govuk-body">
       <a href="/manage/manage-users/v2/" class="govuk-link--no-visited-state">
-        Add and remove account users
+        Add and remove users
       </a>
     </p>
   </div>
