Small content changes for Listed building consent, Before you start journey

--- a/app/views/appeal/before-you-start/v15/listed-building-options.html
+++ b/app/views/appeal/before-you-start/v15/listed-building-options.html
@@ -18,11 +18,11 @@
     items: [
       {
         value: "lbc",
-        text: "Listed building decision"
+        text: "Listed building consent"
       },
       {
         value: "planning",
-        text: "Planning decision"
+        text: "Planning application decision"
       }
     ]
   }) }}
