--- a/app/views/appeal/before-you-start/v15/planning/decision.html
+++ b/app/views/appeal/before-you-start/v15/planning/decision.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = 'Was your planning application granted or refused?' %}
+{% set title = 'Was your application granted or refused?' %}
 
 {% block questions %}
 	{{ govukRadios({
